--- a/instructions.tex
+++ b/instructions.tex
@@ -378,12 +378,13 @@ is directly the \verb|\$HOME|, but the installation can be set elsewhere is need
 % -------------------------------------------------------------------------------
 \section{WIP::: Building an example firmware for the Cortex R5F}
 \label{sec:bulding-an-example}
-\href{https://xilinx-wiki.atlassian.net/wiki/spaces/A/pages/1837006921/OpenAMP+Base+Hardware+Configurations\#Build-RPU-firmware}{Xilinx documentation about building a demo firmware}
+As visible on the official \href{https://xilinx-wiki.atlassian.net/wiki/spaces/A/pages/1837006921/OpenAMP+Base+Hardware+Configurations\#Build-RPU-firmware}{Xilinx documentation about building a demo firmware}, this section will present the required steps for building a new firmware for the R5F core of our Kria board. The goal
+here is to have a demonstration firmware running, able to use the RPMsg system to communicate with the Linux APU.
 
 \subsection{Generating the platform configuration file}
 \label{sec:gener-platf-conf}
 In order to have the libraries and configurations in the IDE ready to be used for our board, we need to obtain configuration files, as presented in the 
-\href{https://xilinx.github.io/kria-apps-docs/kv260/2022.1/build/html/docs/build_vitis_platform.html?highlight=xsa}{Xilinx guid for Kria and Vitis}. At the \href{https://github.com/Xilinx/kria-vitis-platforms}{dedicated repository}, we can have such configurations, but they required to be built.
+\href{https://xilinx.github.io/kria-apps-docs/kv260/2022.1/build/html/docs/build_vitis_platform.html?highlight=xsa}{Xilinx guide for Kria and Vitis}. At the \href{https://github.com/Xilinx/kria-vitis-platforms}{dedicated repository}, we can have such configurations, but they required to be built.
 
 \verb|Cmake|, \verb|tcl| and \verb|idn| will become needed in order to build the firmware.
 As discussed in a thread on \href{https://support.xilinx.com/s/question/0D52E00006jrzsYSAQ/platform-project-cannot-be-created-on-vitis?language=en\_US}{Xilinx community forum}, \verb|libidn11| is specifically required, but creating a symbolic link from the current, 12 version works.
@@ -410,9 +411,70 @@ make platform PLATFORM=k26_base_starter_kit
 \end{tcolorbox}
 
 
+%\pagebreak
+\subsection{Setting up a new IDE project for the Kria board}
+\label{sec:setting-up-new}
+With the platform configuration files available, we can now use the IDE to generate a
+new project for our board. The whole process will be described with screen captures and
+captions.
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.6\textwidth]{./img/vitis_new/project1}
+  \caption{We are starting with creating a ``New Application Project''. You should be greeted with this wizard window. Next.}
+  \label{fig:project1}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.7\textwidth]{./img/vitis_new/project2}
+  \caption{For the platform, we need to get our build Kria configuration. In the ``Create a new platform...'' tab, click the ``Browse...'' button.}
+  \label{fig:project2}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.7\textwidth]{./img/vitis_new/project3}
+  \caption{In the file explorer, we should navigate in the ``k26'' directory, where the configuration file was build.
+    From here we are looking for a ``.xsa'' file, located in a ``hw'' directory, as visible.}
+  \label{fig:project3}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.7\textwidth]{./img/vitis_new/project4}
+  \caption{With the configuration file loaded, we can now select a name for our platform, but most importantly, we have to select the ``psu\_cortex5\_0'' core
+    as a target. The other, Cortex 53 is the APU running Linux.}
+  \label{fig:project4}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.7\textwidth]{./img/vitis_new/project5}
+  \caption{In this next window, we can give a name to our firmware project. It is also critical here to select the core we want to build for.
+    Once again, we want to use the ``psu\_cortex5\_0''.}
+  \label{fig:project5}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.7\textwidth]{./img/vitis_new/project6}
+  \caption{Here, we want to select ``freertos10\_xilinx'' as our Operating System. The rest can remain unchanged.}
+  \label{fig:project6}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.7\textwidth]{./img/vitis_new/project7}
+  \caption{Finally, we can select the demonstration template we are going to use; here we go with ``OpenAMP echo-test'' since we want to
+    have some simple try of the RPMsg system. Finish.}
+  \label{fig:project7}
+\end{figure}
 
 
- Memory values to setup of a new firmware project:
+In the Xilinx documentation, it is made mention of the addresses setting that should be checked in the \verb|lscript.ld| file.
+These valued look different from what could be set in the DTO for the Linux side, but they appear to
+work for the example we are running:
 \begin{tcolorbox}
 \begin{verbatim}
 psu_ddr_S_AXI_BASEADDR             0x3ed00000
@@ -421,8 +483,6 @@ psu_r5_tcm_ram_0_S_AXI_BASEADDR    0x00000000
 psu_r5_tcm_ram_1_S_AXI_BASEADDR    0x00020000
 \end{verbatim}
 \end{tcolorbox}
-
-
 
 
 % -------------------------------------------------------------------------------
@@ -623,7 +683,46 @@ scp ubuntu@192.168.11.4:/microros_ws/firmware/build/* /home/sunoc/Xilinx/workspa
 \end{verbatim}
 \end{tcolorbox}
 
+
+\section{Including the micro-ROS static library in a project}
+Now we have a Vitis demonstration project available and the \verb|libmicroros| static library
+available, we can combine both by including this library into our Kria project.
+
+Many parameters are available to be set up in the IDE for the compilation toolchain, but here is
+a setup that worked to have the IDE to recognize the include files and to be able to use them
+for compiling the firmware.
+
+\label{sec:including-micro-ros}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.7\textwidth]{./img/vitis_new/include}
+  \caption{Firstly, in the ``C/C++ Build'' settings of your firmware project, under the ``Settings'' menu, you should find the gcc compiler
+    ``Directories''. In here you should add the ``include'' directory of your library. Be careful however, if your include files are in
+  a second layer of directory (as it is the case for libmicroros) you will need to include each sub-directory individually.}
+  \label{fig:include1}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.7\textwidth]{./img/vitis_new/include2}
+  \caption{Secondly, in the gcc linkers ``Libraries'', you can add the top level directory of your library. In our case, it is the
+    directory that contains both the ``include'' directory added earlier, and also the ``libmicroros.a'' file.}
+  \label{fig:include2}
+\end{figure}
+
+With both of these setup in your project, you should be able to include the following micro-ROS libraries into your project:
+\begin{tcolorbox}
+\begin{verbatim}
+#include <rcl/rcl.h>
+#include <rcl/error_handling.h>
+#include <rclc/rclc.h>
+#include <rclc/executor.h>
+\end{verbatim}
+\end{tcolorbox}
+
+
 % -------------------------------------------------------------------------------
+\pagebreak
 \section{ROS2}
 \label{sec:ros2}
 As an Ubuntu distribution is installed on the board, the installation of ROS2 can be done
